Fix onmouseover error message; tweak message styles and collapse multiple messages (not quite working right yet)

--- a/src/sass/partials/_shame.scss
+++ b/src/sass/partials/_shame.scss
@@ -19,12 +19,18 @@ body.logged-in {
 		position: relative;
 		
 		.shame-messages {
+			
 			position: absolute;
 			top: 0;
 			left: 0;
 			margin: 0;
 			list-style-type: none;
-			box-shadow: $level3;
+			width: 150px;
+			
+			&:hover .shame-message:not(:first-child) {
+				margin-top: 0;
+			}
+			
 		}
 		
 		.shame-message {
@@ -35,12 +41,20 @@ body.logged-in {
 			font-family: $type-sans;
 			font-size: .8rem;
 			line-height: 1rem;
-			width: 150px;
+			width: 100%;
 			opacity: .9;
-			transition: opacity .1s ease-in-out;
+			transition: 
+				opacity .1s ease-in-out, 
+				margin-top .2s ease-in-out;
 			z-index: 8000;
-			margin: 0;
-
+			margin: 0 0 2px;
+			border-radius: 0 5px 5px;
+			box-shadow: 0 0 .3rem rgba(0,0,0,.3);
+			
+			&:not(:first-child) {
+				margin-top: -30%;
+			}
+			
 			&:hover {
 				opacity: 1;
 			}
@@ -52,7 +66,7 @@ body.logged-in {
 			padding-left: 22px;
 			text-transform: uppercase;
 			height: 16px;
-			line-height: 16px;
+			line-height: 19px;
 			font-weight: bold;
 			background-image: url(images/errors.png);
 			background-size: 16px auto;
@@ -65,6 +79,7 @@ body.logged-in {
 		
 		.shame-type-error {
 			
+			border: 1px solid #C01C1C;
 			border-top: 5px solid #C01C1C;
 			background: #ff4753;
 			color: #fff;
@@ -77,6 +92,7 @@ body.logged-in {
 		
 		.shame-type-warning {
 			
+			border: 1px solid #FF9F10;
 			border-top: 5px solid #FF9F10;
 			background: #fffc7b;
 			color: #000;
@@ -89,6 +105,7 @@ body.logged-in {
 		
 		.shame-type-suggestion {
 			
+			border: 1px solid #1052FF;
 			border-top: 5px solid #1052FF;
 			background: #6495ff;
 			color: #fff;
